@@ -8,6 +8,7 @@ What's New for OpenJPEG
 July 26, 2011
 ! [mickael] delete double semi-colon at end of line which generate crash on win platform
 ! [mickael] use ansi c function fgets instead of GNU function getline to avoid build error with win platform
+! [mickael] correct CRLF problem between unix baseline and win platform test file generated by j2k_dump
 
 July 25, 2011
 * [mickael] fixed issue 74 for trunk
